added rules to eslint

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -18,5 +18,7 @@
         "react"
     ],
     "rules": {
+        "linebreak-style": ["error", "windows"],
+        "no-console": ["warn", { "allow": ["warn", "error"] }]
     }
 }
